--- a/tp3/sass/style.scss
+++ b/tp3/sass/style.scss
@@ -66,11 +66,10 @@ body {
   justify-content: space-around;
   .title{
     font-family: 'Pattaya', sans-serif;
-    font-size: 40px;
-    
+    font-size: 40px;  
     color: $title-color;
     text-align: center;
-    margin-top: 0;
+    margin: 0;
   }
 }
 .containerImgs {
@@ -78,8 +77,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   width: 500px;
-  
-  
+  margin: auto; 
 }
 .board .containerImgs .numero{
   height: auto;
@@ -111,9 +109,46 @@ body {
   width: 100px;
   height: 100px;
   background-color: white;
-  border: 1px solid black;
 }
 .theimageinside{
   width: 100%;
   height: 100%;
+}
+#welcome{
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+  font-size: 25px;
+  margin: 0;
+}
+#intentos{
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+  font-size: 25px;
+  margin: 0;
+}
+#dificultad{
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+  font-size: 25px;
+  margin: auto;
+  background-color: #f4bd8a;
+  width: 200px;
+  height: 30px;
+  margin: auto;
+  margin-bottom: 10px;
+  border: 2px solid;
+  border-radius: 5px;
+}
+#tries{
+  text-align: center;
+  font-family: 'Amatic SC', cursive;
+  font-size: 25px;
+  background-color: #f4bd8a;
+  width: 200px;
+  height: 30px;
+  margin: auto;
+  margin-bottom: 10px;
+  border: 2px solid;
+  border-radius: 5px;
+  
 }
