--- a/tp3/sass/style.css
+++ b/tp3/sass/style.css
@@ -117,6 +117,7 @@ body {
   height: 100%;
 }
 
+/* -----mensajes--------- */
 #welcome {
   text-align: center;
   font-family: "Amatic SC", cursive;
@@ -156,6 +157,93 @@ body {
   margin-bottom: 10px;
   border: 2px solid;
   border-radius: 5px;
+}
+
+/* -----mensajes--------- */
+.modal-loser {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  text-align: -webkit-center;
+}
+.modal-loser .modal-content {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  background-color: #EEE8AA;
+  border: 5px solid black;
+  border-radius: 25px;
+  margin-top: 200px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.modal-loser .modal-content #loser-message {
+  color: #a74544;
+  font-family: "Pattaya", sans-serif;
+  text-align: center;
+  margin: auto;
+}
+
+#myBtn {
+  width: 150px;
+  height: 45px;
+  margin: auto;
+  background-color: #fd9727;
+  padding: 5px;
+  color: white;
+  font-family: "Comfortaa", cursive;
+  font-size: 18px;
+  border-radius: 10px;
+  text-decoration: none;
+  border-style: none;
+}
+
+.modal-winner {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  text-align: -webkit-center;
+}
+.modal-winner .modal-contentWinner {
+  width: 500px;
+  height: 500px;
+  display: flex;
+  background-color: #EEE8AA;
+  border: 5px solid black;
+  border-radius: 25px;
+  margin-top: 200px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /*# sourceMappingURL=style.css.map */
