--- a/tp3/sass/style.scss
+++ b/tp3/sass/style.scss
@@ -114,6 +114,7 @@ body {
   width: 100%;
   height: 100%;
 }
+/* -----mensajes--------- */
 #welcome{
   text-align: center;
   font-family: 'Amatic SC', cursive;
@@ -152,3 +153,75 @@ body {
   border-radius: 5px;
   
 }
+
+/* -----mensajes--------- */
+.modal-loser {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  text-align: -webkit-center;
+  .modal-content{
+    width: 200px;
+    height: 200px;
+    display: flex;
+    background-color: $background-color;
+    border: 5px solid black;
+    border-radius: 25px;
+    margin-top: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    
+    #loser-message{
+      color: #a74544;
+      font-family: 'Pattaya', sans-serif;
+      text-align: center;
+      margin: auto;
+    }
+    }
+  }
+#myBtn{
+  width: 150px;
+  height: 45px;
+  margin: auto;
+  background-color: $buttons-color;
+  padding: 5px;
+  color: white;
+  font-family: 'Comfortaa', cursive;
+  font-size: 18px;
+  border-radius: 10px;
+  text-decoration: none;
+  border-style: none;  
+}
+.modal-winner {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  text-align: -webkit-center;
+  .modal-contentWinner{
+    width: 500px;
+    height: 500px;
+    display: flex;
+    background-color: $background-color;
+    border: 5px solid black;
+    border-radius: 25px;
+    margin-top: 200px;
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+    }
+  }
